gallery.css
@charset "utf-8";

body {
    background-color: #fff;
    display: grid;
    grid-template-areas:
        "corn head"
        "side main";
    grid-template-rows: 2.75rem 1fr;
    grid-template-columns: 15rem 1fr;
    height: 100vh;
    margin: 0;
    font-family: Roboto, Arial, sans-serif;
}

.corner {
    grid-area: corn;
    z-index: 2;
    background-color: rgb(44,44,44);
}

.header {
    grid-area: head;
    z-index: 1;
    background-color: rgb(44,44,44);
    box-shadow: 0 0.1vw 0.4vw 0 rgba(0,0,0,0.32);
}
.sidebar {
    grid-area: side;
    z-index: 2;
    background-color: rgb(32,32,32);
    overflow:hidden;
    box-shadow: 0.1rem 0 0.4rem 0 rgba(0,0,0,0.32);
    pointer-events: auto;
    padding-top: 0.75rem;
}

.side-container {
    width: calc(100% * 2);
    display: grid;
    margin-left: 0;
    grid-template-columns: 1fr 1fr;
    transition: left 1s;
    left: 0;
    position: relative;
    will-change: left;
}

.side1 {
    padding-left: 0.3rem;
    padding-right: 0.3rem;
    overflow: hiddeN;
}

.side2 {
    padding-left: 0.3rem;
    padding-right: 0.3rem;
}

@media (max-width: 62rem) {
    .sidebar {
        grid-template-columns: 1fr;
    }
}

.main {
    grid-area: main;
    overflow-y: auto;
    padding: 1rem 3rem 1rem 3rem;
    background-color: rgba(19,19,19);
}

.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
    grid-gap: 1rem;
}

.sixteenbynine {
    position: relative;
    padding-top: calc((100% - 4px) * 0.5625);
    margin: 2px;
    background-color: rgb(32,32,32);
    transition: background-color 3s;
}

.sixteenbynine.reduced {
    margin: 0;
    padding-top: calc(100% * 0.5625);
}

.gallery-image {
    position: absolute;
    object-fit: fill;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 0;
    flex-direction: column;
    background-size: 100% 100%;
    color: rgb(32,32,32);
    transition: opacity 3s;
    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(0,0,0,0.16), 0 0 0 0.05rem rgba(0,0,0,0.08);
}

.grid-item {
    overflow: hidden;
    box-shadow: 0.25rem 0.25rem 1.5rem -0.55rem rgba(0,0,0,0.75);
    position:relative;
}

.image-ui-container {
    position:absolute;
    top:0;
    left:0;
    bottom:0;
    right:0;
    z-index: 1;
    filter: drop-shadow(0 0 0.2rem rgba(0,0,0,0.5));
}

.image-ui-container.reduced {
    position:relative;
    z-index: 0;
    clip-path: initial;
    filter: initial;
}

.image-ui-container.reduced .image-frame {
    display: none;
}

.image-bar {
    position:absolute;
    top:0;
    left:0;
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: auto 1fr;
    color: rgb(220,220,220);
    background-color: rgb(32,32,32);
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
    padding-left: 0.75rem;
    padding-right: 2.5rem;
    transition: background-color 2s;
    clip-path: polygon(0 0, 100% 0, calc(100% - 2rem) 100%, 0 100%);
}

.image-bar.reduced {
        padding-right: 0.75rem;
        clip-path: initial;
        position: relative;
    }

.image-frame {
    position:absolute;
    top:0;
    left:0;
    bottom:0;
    right:0;
    z-index: 1;
    background-color: rgb(32,32,32);
    transition: background-color 2s;
    clip-path: polygon(
        0 0, 100% 0, 100% 100%, 0 100%, 0 0,
        2px 2px, 2px calc(100% - 2px), calc(100% - 2px) calc(100% - 2px), calc(100% - 2px) 2px, 2px 2px
    );
}

@supports(-ms-ime-align: auto) {
    .image-frame {
        opacity: 0;
    }

    .image-bar {
        padding-right: 0.75rem;
        clip-path: initial;
        position: relative;
        width: calc(100% - 1.5rem);
    }

    .image-bar.reduced {
        padding-right: 0.75rem;
        clip-path: initial;
        position: relative;
    }

    .sixteenbynine {
        margin:0;
    }

    .image-ui-container {
        position:relative;
        z-index: 0;
        clip-path: initial;
    }
}

.image-title {
    font-weight: bold;
    font-size: 1rem;
    align-self: center;
    justify-self: center;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.loadmore {
    display: none;
    height: 3rem;
    grid-template-columns: 1fr;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin-top: 2rem;
    margin-bottom: 1rem;
    color: rgba(220,220,220,0.9);
}

#loadmore2 {
    align-self: center;
    justify-self: center;
}

#loadmore-indicator {
    width: 15rem;
    height: 3rem;
    border: none;
    font-size: 1rem;
    outline: none;
    cursor: pointer;
    background-color: rgb(88,88,88);
    color: rgba(220,220,220,0.9);
}

#loadmore-indicator:hover {
    background-color: rgb(120,120,120);
}

#loadmore-indicator:active {
    background-color: rgb(80,80,80);
}

.spinnerContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition: opacity 1s;
}

.spinner {
    width: 40px;
    height: 40px;
    position: relative;
}

.cube1, .cube2 {
    background-color: rgb(120,120,120);
    width: 16px;
    height: 16px;
    position: absolute;
    top: -8px;
    left: -8px;

    -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
    animation: sk-cubemove 1.8s infinite ease-in-out;
}

.cube2 {
    -webkit-animation-delay: -0.9s;
    animation-delay: -0.9s;
}
@keyframes sk-cubemove {
    25% {transform: translateX(42px) rotate(-90deg) scale(0.5)}
    50% {transform: translateX(42px) translateY(42px) rotate(-180deg)}
    75% {transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5)}
    100% {transform: rotate(-360deg)}
}

.scrollbar-measure {
    overflow-y: scroll;
    width: 100px;
    height: 100px;
    position: absolute;
    top: -9999px;
}

img {
    text-align: center;
    width: 100%;
    display: block;
    position: relative;
    overflow:hidden;
}
/* ... */

